# ProjectInfoLab

./: CMakeLists.txt  Database.cpp  Database.h  Folder.cpp  Folder.h  Interface.cpp  Interface.h  Note.cpp  Note.h  NoteCounterNotifier.cpp  NoteCounterNotifier.h  Observer.h  Subject.h  main.cpp
Test/: CMakeLists.txt  Database.cpp  Database.h  DatabaseTest.cpp  Folder.cpp  Folder.h  FolderTest.cpp  Interface.cpp  Note.cpp  Note.h  NoteCounterNotifier.h  NoteTest.cpp  Observer.h  runAllTests.cpp
